--- a/style.css
+++ b/style.css
@@ -1,42 +1,154 @@
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif
 }
 
-#principal{
-    width: 80%;
-    margin: 0 auto;
-    height: 450px;
-    background: #dadada;   
-    padding-top: 150px;
+body, html{
+    color: aliceblue;
+    height: 100%;
+    background: url(imagens2/fundo2.jpg) fixed 100%;
+   
+}
+
+#container{
+  width: 80%;
+  margin: 0 auto;
+  
+
+}
+
+header{  
+    width: 100%;
+    height: 120px;
+    color: #fff;
+    background: #111111;
+    border: 2px solid black;
+ }
+
+ nav{
+    height: 100%;
+    max-width: 1440px;
+    margin-inline: auto;
+    padding-inline: 40px;
     display: flex;
     justify-content: space-between;
-    text-align: center;
-    border: 2px solid black;
-    border-radius: 50px;
-    
-}
+    align-items: center;
+ }
 
-.div1{
-    background: #dadada;
-    width: 250px;
-    height: 250px;
-    margin: 0 70px ;
-    
-}
+ .logo{
+    font-size: 40px;
+ }
 
-.div1 a {
-    color: #000000;
-    text-decoration: none;
-}
+ .logo span{
+    color: #2d8de6;
+ }
 
-.div1:hover{
-    color: white;
-    background: #747474;
+ ul{
+    display: flex;
+    align-items: center;
+ }
 
-}
+ li{
+    list-style: none;
+    margin-left: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #2d8de6;
+    padding: 10px 15px;
+    border-radius: 10px;
+    transition: 1s;
+ }
 
-a:hover{
-    color: white;
-}
+ li:hover{
+   background-color : #111111;
+ }
 
+ p{
+   color: #111111;
+   font-size: 25px;
+ }
+
+ .conteudo1{
+   border-radius: 170px;
+   width: 250px;
+   height: 250px;
+   background: #fff;
+   
+ }
+
+
+ .caixa{
+   width: 60%;
+   margin: 0 auto;
+   display: flex;
+   justify-content: space-between;
+   font-size: 2em;
+   padding-top: 30px;
+
+ }
+
+
+ .div1{
+
+   width: 100%;
+   font-size: 1.2em;
+   padding-top: 70px;
+   padding-left: 40px;
+   text-align: center;
+
+ }
+
+ h1{
+  text-align: center;
+  text-decoration: underline;
+  
+ }
+
+
+ .div3{
+   clear: both;
+   padding-top: 100px;
+   padding: 40px;
+   padding-top: 100px; 
+   text-align: center;
+   background: #111111;
+   border-radius: 20px;
+
+ }
+
+ .div4{
+    width:100% ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 120px;
+    margin: 70px 0;
+
+ }
+
+ 
+
+ footer{
+   clear: both;
+   background: #111111;
+   height: 150px;
+   border: 2px solid black;
+   text-align: center;
+   padding-top: 20px;
+   border-radius: 20px 20px 0 0;
+   transition: 1s;
+ }
+
+ footer a{
+  padding: 5px 30px ;
+  text-decoration: none;
+  color: #fff;
+  transition: 1s;
+ }
+
+ footer a:hover{
+  border-radius: 20px;
+  background: #2d8de6;
+ }
